# rlge

./: .gitignore  CMakeLists.txt  README.md
examples/basic_game/: main.cpp
examples/collision_debug/: main.cpp
examples/multiview/: main.cpp
examples/particles/: main.cpp
examples/platformer/: main.cpp  ui.cpp
examples/platformer/assets/levels/: level1.tmj  level2.tmj
examples/platformer/assets/sprites/: tilesets.tsj  tilesets.tsx
examples/snake/: game_over_scene.cpp  game_over_scene.h  main.cpp  snake_game.cpp  snake_game.hpp  snake_scene.cpp  snake_scene.hpp
examples/tilemap/: main.cpp
examples/tilemap/assets/: map.tmj
examples/tilemap_demo/: main.cpp
examples/tilemap_demo/assets/: map.tmj
src/: asset.cpp  asset.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  component.hpp  debug.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entity_registry.hpp  events.hpp  input.cpp  input.hpp  particle_emitter.cpp  particle_emitter.hpp  prefab.cpp  prefab.h  prefab.hpp  render_entity.hpp  render_queue.cpp  render_queue.hpp  runtime.cpp  runtime.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp  sprite_sheet.cpp  sprite_sheet.hpp  tilemap.cpp  tilemap.hpp  transformer.hpp  tween.cpp  tween.hpp  window.cpp  (+1 more)
src/collision/: collider.hpp  collider_types.hpp  collision_system.cpp  collision_system.hpp  narrow_phase.cpp  narrow_phase.hpp
src/collision/shape/: box_collider.hpp  circle_collider.hpp  obb_collider.hpp  polygon_collider.hpp
